# kafkalite

./: .gitignore  LICENSE  Makefile  README.md
.benchmarks/: README.md  compare-quick-vs-runtime-20260416T5d39b26-dirty.md  compare-v1.0.0-vs-runtime-20260416T5d39b26-dirty.md
.benchmarks/20260413T012819Z-6db643f/: metrics.csv  result.json  summary.md
.benchmarks/20260413T012819Z-6db643f/scenario-bench-commit-resume/: server.properties
.benchmarks/20260413T012819Z-6db643f/scenario-bench-commit-resume/data/state/: state.journal
.benchmarks/20260413T012819Z-6db643f/scenario-bench-fetch-multi_partition/: server.properties
.benchmarks/20260413T012819Z-6db643f/scenario-bench-fetch-multi_partition/data/state/: state.journal
.benchmarks/20260413T012819Z-6db643f/scenario-bench-fetch-tail/: server.properties
.benchmarks/20260413T012819Z-6db643f/scenario-bench-fetch-tail/data/state/: state.journal
.benchmarks/20260413T012819Z-6db643f/scenario-bench-mixed-handoff/: server.properties
.benchmarks/20260413T012819Z-6db643f/scenario-bench-mixed-handoff/data/state/: state.journal
.benchmarks/20260413T012819Z-6db643f/scenario-bench-produce-multi_partition/: server.properties
.benchmarks/20260413T012819Z-6db643f/scenario-bench-produce-small/: server.properties
.benchmarks/20260413T012819Z-6db643f/scenario-bench-produce-small/data/state/: state.journal
.benchmarks/20260413T012819Z-6db643f/scenario-bench-roundtrip/: server.properties
.benchmarks/quick-20260416T5d39b26-dirty/: metrics.csv  result.json  summary.md
.benchmarks/runtime-20260416T5d39b26-dirty/: metrics.csv  result.json  summary.md
.benchmarks/v1.0.0/: metrics.csv  result.json  summary.md
.benchmarks/v1.0.0-ea1419d/: metrics.csv  result.json  summary.md
.benchmarks/v1.0.1/: metrics.csv  result.json  summary.md
.benchmarks/v1.1.0/: metrics.csv  result.json  summary.md
.fuzz/r12/: pr1-validation.md
.github/workflows/: publish-crate.yml
docs/: IMPLEMENTATION_SUMMARY.md  LIMITATIONS.md
rust/client/: Cargo.toml  README.md  build.rs
rust/client/proto/: kafkalite.proto
rust/client/src/: conversions.rs  lib.rs  models.rs
rust/server/: Cargo.toml  README.md  server.properties.example
rust/server/examples/: server.properties
rust/server/fuzz/: .gitignore  Cargo.toml
rust/server/fuzz/fuzz_targets/: cluster_codec_decode.rs  protocol_peek_header.rs
rust/server/src/: config.rs  lib.rs  main.rs
rust/server/src/bench/: broker_process.rs  mixed.rs  mod.rs  report.rs  scenarios.rs
rust/server/src/broker/: dispatcher.rs  mod.rs  server.rs
rust/server/src/broker/handlers/: bootstrap.rs  groups.rs  mod.rs  produce_fetch.rs
rust/server/src/cluster/: codec.rs  config.rs  mod.rs  replication.rs  rpc.rs  runtime.rs  test_support.rs  transport.rs
rust/server/src/cluster/controller/: mod.rs
rust/server/src/cluster/metadata/: image.rs  mod.rs  record.rs  store.rs
rust/server/src/cluster/quorum/: mod.rs
rust/server/src/protocol/: mod.rs
rust/server/src/store/: error.rs  mod.rs  models.rs  sqlite.rs
rust/server/src/store/file/: control_plane.rs  data_plane.rs  log.rs  mod.rs  policy.rs  state.rs  tests.rs  tests_d1.rs  topic_catalog.rs
rust/server/tests/: aiokafka_batch_extra.py  aiokafka_commit_mixed.py  aiokafka_headers.py  aiokafka_mixed_shapes.py  aiokafka_more.py  aiokafka_more_empty_beginning.py  aiokafka_more_empty_beginning_order.py  aiokafka_more_empty_beginning_rewind.py  aiokafka_more_empty_beginning_rewind_append.py  aiokafka_more_empty_beginning_seek.py  aiokafka_more_empty_beginning_seek_zero.py  aiokafka_more_empty_beginning_seek_zero_append.py  aiokafka_more_empty_beginning_seek_zero_append_order.py  aiokafka_more_empty_beginning_single_tail.py  aiokafka_more_empty_beginning_tail.py  aiokafka_more_empty_beginning_tail_order.py  aiokafka_more_empty_tail.py  aiokafka_more_empty_tail_after_end.py  aiokafka_more_empty_tail_after_end_order.py  aiokafka_more_empty_tail_order.py  aiokafka_more_empty_tail_rewind.py  aiokafka_more_empty_tail_seek.py  aiokafka_more_empty_tail_seek_zero.py  aiokafka_more_empty_tail_seek_zero_append.py  aiokafka_more_empty_tail_single_rewind.py  aiokafka_more_empty_tail_tail.py  aiokafka_more_tail.py  aiokafka_smoke.py  aiokafka_tombstone.py  compat.rs  config_branch.rs  contract.rs  control_plane.rs  control_plane_branch.rs  control_plane_leave_branch.rs  control_plane_membership_branch.rs  differential.rs  metadata_image_branch.rs  metadata_image_lookup_branch.rs  python_compat.rs  (+4 more)
scripts/: compare-bench.sh  run-bench.sh  run-differential.sh  run-python-compat.sh
(+2 files in other folders)
