[package]
name = "kafkalite"
version = "0.1.0"
edition = "2024"
build = "build.rs"
authors = ["Youngseok Choi"]
description = "Internal compatibility crate for Kafkalite protobufs and shared message models"
license = "MIT"
readme = "README.md"
repository = "https://github.com/YoungseokCh/kafkalite"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
