[package]
name = "kafkalite-server"
version = "0.1.0"
edition = "2024"
authors = ["Youngseok Choi"]
description = "Broker-owned file-log Kafka wire protocol server"
license = "MIT"
readme = "README.md"
repository = "https://github.com/YoungseokCh/kafkalite"

[[bin]]
name = "kafkalite"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = { version = "1.10", features = ["serde"] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
kafka-protocol = { version = "0.17", default-features = false, features = ["broker"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
rdkafka = { version = "0.37", features = ["tokio"] }
tempfile = "3"
