[package]
name = "kafkalite-server"
version = "1.1.1"
edition = "2024"
rust-version = "1.87"
authors = ["Youngseok Choi"]
description = "Broker-owned file-log Kafka wire protocol server"
license = "MIT"
readme = "README.md"
repository = "https://github.com/YoungseokCh/kafkalite"
keywords = ["kafka", "broker", "streaming", "log", "server"]
categories = ["network-programming", "command-line-utilities"]
autobins = false

[features]
default = []
bench-internal = ["dep:rdkafka"]

[[bin]]
name = "kafkalite"
path = "src/main.rs"

[[bin]]
name = "store_tool"
path = "src/bin/store_tool.rs"

[[bin]]
name = "bench_runner"
path = "src/bin/bench_runner.rs"
required-features = ["bench-internal"]

[dependencies]
anyhow = "1.0"
bytes = { version = "1.10", features = ["serde"] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
kafka-protocol = { version = "0.17", default-features = false, features = ["broker", "client"] }
rdkafka = { version = "0.37", features = ["tokio", "cmake-build"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
rdkafka = { version = "0.37", features = ["tokio", "cmake-build"] }
